教练视频和后台同步

--- a/JMXMiJia/JMXMiJia/Classes/StudentProfile/Controller/help.plist
+++ b/JMXMiJia/JMXMiJia/Classes/StudentProfile/Controller/help.plist
@@ -17,7 +17,7 @@
 				<key>ask</key>
 				<string>如何获得驾米红包？</string>
 				<key>response</key>
-				<string>m:（1）学员通过“驾米学车”app报名成功后，平台赠送相应额度红包给驾米学员。 \n  （2）学员自主充值。</string>
+				<string>m:（1）学员通过“驾米学车”app报名成功后，平台赠送相应额度红包给驾米学员。（2）学员自主充值。</string>
 			</dict>
 			<dict>
 				<key>ask</key>
@@ -29,7 +29,7 @@
 				<key>ask</key>
 				<string>学员如何自主充值红包?</string>
 				<key>response</key>
-				<string>m：为了你的资金安全，目前驾米仅提供线下充值，充值请联系驾米客服。(驾米无任何网上充值途径,谨防受骗！）\n   客服热线:18987460601</string>
+				<string>m：为了你的资金安全，目前驾米仅提供线下充值，充值请联系驾米客服。(驾米无任何网上充值途径,谨防受骗！）   客服热线:18987460601</string>
 			</dict>
 			<dict>
 				<key>ask</key>
@@ -85,7 +85,7 @@
 				<key>ask</key>
 				<string>为什么要每日点评？</string>
 				<key>response</key>
-				<string>m：（1）每日点评可增进老师与学员之间的亲密关系。\n   （2）可形成一套完善的教学及考勤记录，实时掌握学员学车进度。\n   （3）可获得星级积分，加快星级成长速度。\n   （4）可获得学员红包或学员转赠的驾米红包。</string>
+				<string>m:（1）每日点评可增进老师与学员之间的亲密关系。（2）可形成一套完善的教学及考勤记录，实时掌握学员学车进度。（3）可获得星级积分，加快星级成长速度。（4）可获得学员红包或学员转赠的驾米红包。</string>
 			</dict>
 		</array>
 	</dict>
